# filament

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSING.md  README.md  ROADMAP.md  SECURITY.md  TRADEMARKS.md  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  turbo.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
apps/docs/: README.md
apps/playground/: index.html  package.json  tsconfig.json  vite.config.ts
apps/playground/src/: App.tsx  compiler-parity.test.ts  hydration-demo.test.ts  hydration-demo.tsx  main.tsx  styles.css
apps/playground/src/benchmark/: filament-adapter.tsx  fixtures.ts  react-adapter.ts  runner.ts  ssr-fixtures.ts  stats.test.ts  stats.ts  suites.ts  types.ts
crates/filament_cli/: Cargo.toml
crates/filament_cli/src/: main.rs
crates/filament_codegen_dom/: Cargo.toml
crates/filament_codegen_dom/src/: lib.rs
crates/filament_codegen_ssr/: Cargo.toml
crates/filament_codegen_ssr/src/: lib.rs
crates/filament_ir/: Cargo.toml
crates/filament_ir/src/: lib.rs
crates/filament_optimizer/: Cargo.toml
crates/filament_optimizer/src/: lib.rs
crates/filament_parser/: Cargo.toml
crates/filament_parser/src/: lib.rs
